--- a/SASSandLess/SASSandLess/TestPage.html
+++ b/SASSandLess/SASSandLess/TestPage.html
@@ -4,8 +4,9 @@
     <title></title>
     <link href="styles.less" rel="stylesheet/less" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.1/less.js" type="text/javascript"></script>
-    <script src="JavaScript1.js"></script>
-    <script src="JSPropertes.js"></script>
+    <!--<script src="JavaScript1.js"></script>
+    <script src="JSPropertes.js"></script>-->
+    <script src="ProtoTypes.js"></script>
 </head>
 <body>
     <div id="container">
