--- a/SASSandLess/SASSandLess/TestPage.html
+++ b/SASSandLess/SASSandLess/TestPage.html
@@ -6,7 +6,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.1/less.js" type="text/javascript"></script>
     <!--<script src="JavaScript1.js"></script>
     <script src="JSPropertes.js"></script>-->
-    <script src="ProtoTypes.js"></script>
+    <!--<script src="ProtoTypes.js"></script>-->
+    <script src="Closures.js"></script>
 </head>
 <body>
     <div id="container">
